@@ -1,11 +1,27 @@
 package pl.allegro.tech.hermes.integrationtests.management;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.awaitility.Awaitility.waitAtMost;
+
+import static pl.allegro.tech.hermes.api.ContentType.AVRO;
+import static pl.allegro.tech.hermes.api.ContentType.JSON;
+import static pl.allegro.tech.hermes.api.PatchData.patchData;
+import static pl.allegro.tech.hermes.api.PublishingChaosPolicy.ChaosMode.DATACENTER;
+import static pl.allegro.tech.hermes.api.TopicWithSchema.topicWithSchema;
+import static pl.allegro.tech.hermes.integrationtests.setup.HermesExtension.auditEvents;
+import static pl.allegro.tech.hermes.integrationtests.setup.HermesExtension.brokerOperations;
+import static pl.allegro.tech.hermes.test.helper.builder.SubscriptionBuilder.subscriptionWithRandomName;
+import static pl.allegro.tech.hermes.test.helper.builder.TopicBuilder.topic;
+import static pl.allegro.tech.hermes.test.helper.builder.TopicBuilder.topicWithRandomName;
+
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.springframework.test.web.reactive.server.WebTestClient;
+
 import pl.allegro.tech.hermes.api.ContentType;
 import pl.allegro.tech.hermes.api.ErrorCode;
 import pl.allegro.tech.hermes.api.ErrorDescription;
@@ -29,23 +45,9 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Stream;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.awaitility.Awaitility.waitAtMost;
-import static pl.allegro.tech.hermes.api.ContentType.AVRO;
-import static pl.allegro.tech.hermes.api.ContentType.JSON;
-import static pl.allegro.tech.hermes.api.PatchData.patchData;
-import static pl.allegro.tech.hermes.api.PublishingChaosPolicy.ChaosMode.DATACENTER;
-import static pl.allegro.tech.hermes.api.TopicWithSchema.topicWithSchema;
-import static pl.allegro.tech.hermes.integrationtests.setup.HermesExtension.auditEvents;
-import static pl.allegro.tech.hermes.integrationtests.setup.HermesExtension.brokerOperations;
-import static pl.allegro.tech.hermes.test.helper.builder.SubscriptionBuilder.subscriptionWithRandomName;
-import static pl.allegro.tech.hermes.test.helper.builder.TopicBuilder.topic;
-import static pl.allegro.tech.hermes.test.helper.builder.TopicBuilder.topicWithRandomName;
-
 public class TopicManagementTest {
 
-    @RegisterExtension
-    public static final HermesExtension hermes = new HermesExtension();
+    @RegisterExtension public static final HermesExtension hermes = new HermesExtension();
 
     private static final String SCHEMA = AvroUserSchemaLoader.load().toString();
 
@@ -56,62 +58,58 @@ public class TopicManagementTest {
 
     @Test
     public void shouldEmitAuditEventWhenTopicCreated() {
-        //when
+        // when
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
 
-        //then
-        assertThat(
-                auditEvents.getLastReceivedRequest().getBodyAsString()
-        ).contains("CREATED", "Topic", topic.getQualifiedName());
+        // then
+        assertThat(auditEvents.getLastReceivedRequest().getBodyAsString())
+                .contains("CREATED", "Topic", topic.getQualifiedName());
     }
 
     @Test
     public void shouldEmitAuditEventWhenTopicRemoved() {
-        //given
+        // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
 
-        //when
+        // when
         hermes.api().deleteTopic(topic.getQualifiedName()).expectStatus().isOk();
 
-        //then
-        assertThat(
-                auditEvents.getLastReceivedRequest().getBodyAsString()
-        ).contains("REMOVED", topic.getQualifiedName());
+        // then
+        assertThat(auditEvents.getLastReceivedRequest().getBodyAsString())
+                .contains("REMOVED", topic.getQualifiedName());
     }
 
     @Test
     public void shouldEmitAuditEventWhenTopicUpdated() {
-        //given
+        // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
         PatchData patchData = PatchData.from(ImmutableMap.of("maxMessageSize", 2048));
 
-        //when
+        // when
         hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
-        assertThat(
-                auditEvents.getLastReceivedRequest().getBodyAsString()
-        ).contains("UPDATED", topic.getQualifiedName());
+        // then
+        assertThat(auditEvents.getLastReceivedRequest().getBodyAsString())
+                .contains("UPDATED", topic.getQualifiedName());
     }
 
     @Test
     public void shouldEmitAuditEventBeforeUpdateWhenWrongPatchDataKeyProvided() {
-        //given
+        // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
         PatchData patchData = PatchData.from(ImmutableMap.of("someValue", 2048));
 
-        //when
+        // when
         hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
-        assertThat(
-                auditEvents.getLastReceivedRequest().getBodyAsString()
-        ).contains("BEFORE_UPDATE", topic.getQualifiedName(), "someValue", "2048");
+        // then
+        assertThat(auditEvents.getLastReceivedRequest().getBodyAsString())
+                .contains("BEFORE_UPDATE", topic.getQualifiedName(), "someValue", "2048");
     }
 
     @Test
     public void shouldCreateTopic() {
-        //given
+        // given
         TopicWithSchema topic = TopicWithSchema.topicWithSchema(topicWithRandomName().build());
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
@@ -127,10 +125,12 @@ public class TopicManagementTest {
     public void shouldListTopics() {
         // given
         hermes.initHelper().createTopic(topic("listTopicsGroup.topic1").build());
-        hermes.api().createTopic(new TopicWithSchema(topic("listTopicsGroup.topic2").build(), null));
+        hermes.api()
+                .createTopic(new TopicWithSchema(topic("listTopicsGroup.topic2").build(), null));
 
         // when then
-        assertThat(getGroupTopicsList("listTopicsGroup")).containsExactly("listTopicsGroup.topic1", "listTopicsGroup.topic2");
+        assertThat(getGroupTopicsList("listTopicsGroup"))
+                .containsExactly("listTopicsGroup.topic1", "listTopicsGroup.topic2");
     }
 
     @Test
@@ -143,7 +143,11 @@ public class TopicManagementTest {
 
         // then
         response.expectStatus().isOk();
-        waitAtMost(Duration.ofSeconds(10)).untilAsserted(() -> assertThat(getGroupTopicsList(topic.getName().getGroupName())).isEmpty());
+        waitAtMost(Duration.ofSeconds(10))
+                .untilAsserted(
+                        () ->
+                                assertThat(getGroupTopicsList(topic.getName().getGroupName()))
+                                        .isEmpty());
     }
 
     @Test
@@ -157,8 +161,13 @@ public class TopicManagementTest {
 
         // then
         response.expectStatus().isOk();
-        waitAtMost(Duration.ofSeconds(10)).untilAsserted(() -> assertThat(getGroupTopicsList(topic.getName().getGroupName())).isEmpty());
-        assertThat(hermes.api().isTopicBlacklisted(topic.getQualifiedName()).isBlacklisted()).isFalse();
+        waitAtMost(Duration.ofSeconds(10))
+                .untilAsserted(
+                        () ->
+                                assertThat(getGroupTopicsList(topic.getName().getGroupName()))
+                                        .isEmpty());
+        assertThat(hermes.api().isTopicBlacklisted(topic.getQualifiedName()).isBlacklisted())
+                .isFalse();
     }
 
     @Test
@@ -179,8 +188,12 @@ public class TopicManagementTest {
     public void shouldRemoveTopicWithRelatedSubscriptionsWhenAutoRemoveEnabled() {
         // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
-        Subscription subscription = hermes.initHelper().createSubscription(subscriptionWithRandomName(topic.getName())
-                .withAutoDeleteWithTopicEnabled(true).build());
+        Subscription subscription =
+                hermes.initHelper()
+                        .createSubscription(
+                                subscriptionWithRandomName(topic.getName())
+                                        .withAutoDeleteWithTopicEnabled(true)
+                                        .build());
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().deleteTopic(topic.getQualifiedName());
@@ -189,7 +202,10 @@ public class TopicManagementTest {
         response.expectStatus().isOk();
 
         // and
-        hermes.api().getSubscriptionResponse(topic.getQualifiedName(), subscription.getName()).expectStatus().isBadRequest();
+        hermes.api()
+                .getSubscriptionResponse(topic.getQualifiedName(), subscription.getName())
+                .expectStatus()
+                .isBadRequest();
     }
 
     @Test
@@ -199,8 +215,13 @@ public class TopicManagementTest {
         hermes.initHelper().createGroup(Group.from(groupName));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().createTopic(
-                topicWithSchema(topic(groupName, "shouldNotCreateInvalidTopic").withMaxMessageSize(Topic.MAX_MESSAGE_SIZE + 1).build()));
+        WebTestClient.ResponseSpec response =
+                hermes.api()
+                        .createTopic(
+                                topicWithSchema(
+                                        topic(groupName, "shouldNotCreateInvalidTopic")
+                                                .withMaxMessageSize(Topic.MAX_MESSAGE_SIZE + 1)
+                                                .build()));
 
         // then
         response.expectStatus().isBadRequest();
@@ -213,11 +234,16 @@ public class TopicManagementTest {
         // given no group
 
         // when
-        TopicWithSchema topicWithSchema = topicWithSchema(topic("nonExistingGroup", "topic")
-                .withContentType(AVRO)
-                .withTrackingEnabled(false).build(), SCHEMA);
+        TopicWithSchema topicWithSchema =
+                topicWithSchema(
+                        topic("nonExistingGroup", "topic")
+                                .withContentType(AVRO)
+                                .withTrackingEnabled(false)
+                                .build(),
+                        SCHEMA);
         WebTestClient.ResponseSpec createTopicResponse = hermes.api().createTopic(topicWithSchema);
-        WebTestClient.ResponseSpec schemaResponse = hermes.api().getSchema(topicWithSchema.getQualifiedName());
+        WebTestClient.ResponseSpec schemaResponse =
+                hermes.api().getSchema(topicWithSchema.getQualifiedName());
 
         // then
         createTopicResponse.expectStatus().isNotFound();
@@ -231,7 +257,8 @@ public class TopicManagementTest {
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().createTopic(new TopicWithSchema(topic, null));
+        WebTestClient.ResponseSpec response =
+                hermes.api().createTopic(new TopicWithSchema(topic, null));
 
         // then
         response.expectStatus().isBadRequest();
@@ -241,15 +268,19 @@ public class TopicManagementTest {
     @Test
     public void shouldAllowMigratingTopicFromJsonToAvroByExtendingTopicWithAvroSchema() {
         // given
-        Topic topic = hermes.initHelper().createTopic(topicWithRandomName().withContentType(JSON).build());
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(topicWithRandomName().withContentType(JSON).build());
 
         // when
-        PatchData patch = patchData()
-                .set("contentType", ContentType.AVRO)
-                .set("migratedFromJsonType", true)
-                .set("schema", AvroUserSchemaLoader.load().toString())
-                .build();
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patch);
+        PatchData patch =
+                patchData()
+                        .set("contentType", ContentType.AVRO)
+                        .set("migratedFromJsonType", true)
+                        .set("schema", AvroUserSchemaLoader.load().toString())
+                        .build();
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patch);
 
         // when
         response.expectStatus().isOk();
@@ -258,15 +289,19 @@ public class TopicManagementTest {
     @Test
     public void shouldNotAllowMigratingTopicFromJsonToAvroWhenProvidingInvalidSchema() {
         // given
-        Topic topic = hermes.initHelper().createTopic(topicWithRandomName().withContentType(JSON).build());
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(topicWithRandomName().withContentType(JSON).build());
 
         // when
-        PatchData patch = patchData()
-                .set("contentType", ContentType.AVRO)
-                .set("migratedFromJsonType", true)
-                .set("schema", "invalid...")
-                .build();
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patch);
+        PatchData patch =
+                patchData()
+                        .set("contentType", ContentType.AVRO)
+                        .set("migratedFromJsonType", true)
+                        .set("schema", "invalid...")
+                        .build();
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patch);
 
         // when
         response.expectStatus().isBadRequest();
@@ -274,17 +309,24 @@ public class TopicManagementTest {
     }
 
     @Test
-    public void shouldAllowMigratingTopicFromJsonToAvroWithoutProvidingAvroSchemaWhenItsAlreadyAvailableInRegistry() {
+    public void
+            shouldAllowMigratingTopicFromJsonToAvroWithoutProvidingAvroSchemaWhenItsAlreadyAvailableInRegistry() {
         // given
-        Topic topic = hermes.initHelper().createTopic(topicWithRandomName().withContentType(JSON).build());
-        hermes.api().saveSchema(topic.getQualifiedName(), false, AvroUserSchemaLoader.load().toString());
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(topicWithRandomName().withContentType(JSON).build());
+        hermes.api()
+                .saveSchema(
+                        topic.getQualifiedName(), false, AvroUserSchemaLoader.load().toString());
 
         // when
-        PatchData patch = patchData()
-                .set("contentType", ContentType.AVRO)
-                .set("migratedFromJsonType", true)
-                .build();
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patch);
+        PatchData patch =
+                patchData()
+                        .set("contentType", ContentType.AVRO)
+                        .set("migratedFromJsonType", true)
+                        .build();
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patch);
 
         // when
         response.expectStatus().isOk();
@@ -293,8 +335,12 @@ public class TopicManagementTest {
     @Test
     public void shouldReturnTopicsThatAreCurrentlyTracked() {
         // given
-        Topic trackedTopic = hermes.initHelper().createTopic(topicWithRandomName().withTrackingEnabled(true).build());
-        Topic untrackedTopic = hermes.initHelper().createTopic(topicWithRandomName().withTrackingEnabled(false).build());
+        Topic trackedTopic =
+                hermes.initHelper()
+                        .createTopic(topicWithRandomName().withTrackingEnabled(true).build());
+        Topic untrackedTopic =
+                hermes.initHelper()
+                        .createTopic(topicWithRandomName().withTrackingEnabled(false).build());
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().listTrackedTopics("");
@@ -302,15 +348,26 @@ public class TopicManagementTest {
         // then
         response.expectStatus().isOk();
         assertThat(
-                Arrays.stream(Objects.requireNonNull(response.expectBody(String[].class).returnResult().getResponseBody())).toList()
-        ).contains(trackedTopic.getQualifiedName()).doesNotContain(untrackedTopic.getQualifiedName());
+                        Arrays.stream(
+                                        Objects.requireNonNull(
+                                                response.expectBody(String[].class)
+                                                        .returnResult()
+                                                        .getResponseBody()))
+                                .toList())
+                .contains(trackedTopic.getQualifiedName())
+                .doesNotContain(untrackedTopic.getQualifiedName());
     }
 
     @Test
     public void shouldReturnTopicsThatAreCurrentlyTrackedForGivenGroup() {
         // given
         String groupName = "mixedTrackedGroup1";
-        Topic trackedTopic = hermes.initHelper().createTopic(topic(groupName, "trackedTopic1").withTrackingEnabled(true).build());
+        Topic trackedTopic =
+                hermes.initHelper()
+                        .createTopic(
+                                topic(groupName, "trackedTopic1")
+                                        .withTrackingEnabled(true)
+                                        .build());
         hermes.initHelper().createTopic(topicWithRandomName().withTrackingEnabled(false).build());
 
         // when
@@ -319,18 +376,51 @@ public class TopicManagementTest {
         // then
         response.expectStatus().isOk();
         assertThat(
-                Arrays.stream(Objects.requireNonNull(response.expectBody(String[].class).returnResult().getResponseBody())).toList()
-        ).containsExactly(trackedTopic.getQualifiedName());
+                        Arrays.stream(
+                                        Objects.requireNonNull(
+                                                response.expectBody(String[].class)
+                                                        .returnResult()
+                                                        .getResponseBody()))
+                                .toList())
+                .containsExactly(trackedTopic.getQualifiedName());
     }
 
     @Test
     public void shouldReturnTrackedTopicsWithAvroContentType() {
         // given
         String group = "mixedTrackedGroup2";
-        Topic trackedTopicAvro = hermes.initHelper().createTopicWithSchema(new TopicWithSchema(topic(group, "trackedAvroTopic2").withTrackingEnabled(true).withContentType(AVRO).build(), SCHEMA));
-        Topic untrackedAvroTopic = hermes.initHelper().createTopicWithSchema(new TopicWithSchema(topicWithRandomName().withTrackingEnabled(false).withContentType(AVRO).build(), SCHEMA));
-        Topic untrackedJsonTopic = hermes.initHelper().createTopic(topicWithRandomName().withTrackingEnabled(false).withContentType(JSON).build());
-        Topic trackedJsonTopic = hermes.initHelper().createTopic(topicWithRandomName().withTrackingEnabled(true).withContentType(JSON).build());
+        Topic trackedTopicAvro =
+                hermes.initHelper()
+                        .createTopicWithSchema(
+                                new TopicWithSchema(
+                                        topic(group, "trackedAvroTopic2")
+                                                .withTrackingEnabled(true)
+                                                .withContentType(AVRO)
+                                                .build(),
+                                        SCHEMA));
+        Topic untrackedAvroTopic =
+                hermes.initHelper()
+                        .createTopicWithSchema(
+                                new TopicWithSchema(
+                                        topicWithRandomName()
+                                                .withTrackingEnabled(false)
+                                                .withContentType(AVRO)
+                                                .build(),
+                                        SCHEMA));
+        Topic untrackedJsonTopic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withTrackingEnabled(false)
+                                        .withContentType(JSON)
+                                        .build());
+        Topic trackedJsonTopic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withTrackingEnabled(true)
+                                        .withContentType(JSON)
+                                        .build());
 
         // and
         String query = "{\"query\": {\"trackingEnabled\": \"true\", \"contentType\": \"AVRO\"}}";
@@ -339,19 +429,57 @@ public class TopicManagementTest {
         WebTestClient.ResponseSpec response = hermes.api().queryTopics("", query);
 
         // then
-        assertThat(Arrays.stream(Objects.requireNonNull(response.expectBody(String[].class).returnResult().getResponseBody())).toList())
+        assertThat(
+                        Arrays.stream(
+                                        Objects.requireNonNull(
+                                                response.expectBody(String[].class)
+                                                        .returnResult()
+                                                        .getResponseBody()))
+                                .toList())
                 .contains(trackedTopicAvro.getQualifiedName())
-                .doesNotContain(untrackedJsonTopic.getQualifiedName(), untrackedAvroTopic.getQualifiedName(), trackedJsonTopic.getQualifiedName());
+                .doesNotContain(
+                        untrackedJsonTopic.getQualifiedName(),
+                        untrackedAvroTopic.getQualifiedName(),
+                        trackedJsonTopic.getQualifiedName());
     }
 
     @Test
     public void shouldReturnTrackedTopicsWithAvroContentTypeForGivenGroup() {
         // given
         String group = "mixedTrackedGroup3";
-        Topic trackedTopicAvro = hermes.initHelper().createTopicWithSchema(new TopicWithSchema(topic(group, "trackedAvroTopic3").withTrackingEnabled(true).withContentType(AVRO).build(), SCHEMA));
-        hermes.api().createTopic(new TopicWithSchema(topic(group, "untrackedAvroTopic").withTrackingEnabled(false).withContentType(AVRO).build(), SCHEMA));
-        hermes.api().createTopic(new TopicWithSchema(topic(group, "untrackedJsonTopic").withTrackingEnabled(false).withContentType(JSON).build(), null));
-        hermes.api().createTopic(new TopicWithSchema(topic(group, "trackedJsonTopic").withTrackingEnabled(true).withContentType(JSON).build(), null));
+        Topic trackedTopicAvro =
+                hermes.initHelper()
+                        .createTopicWithSchema(
+                                new TopicWithSchema(
+                                        topic(group, "trackedAvroTopic3")
+                                                .withTrackingEnabled(true)
+                                                .withContentType(AVRO)
+                                                .build(),
+                                        SCHEMA));
+        hermes.api()
+                .createTopic(
+                        new TopicWithSchema(
+                                topic(group, "untrackedAvroTopic")
+                                        .withTrackingEnabled(false)
+                                        .withContentType(AVRO)
+                                        .build(),
+                                SCHEMA));
+        hermes.api()
+                .createTopic(
+                        new TopicWithSchema(
+                                topic(group, "untrackedJsonTopic")
+                                        .withTrackingEnabled(false)
+                                        .withContentType(JSON)
+                                        .build(),
+                                null));
+        hermes.api()
+                .createTopic(
+                        new TopicWithSchema(
+                                topic(group, "trackedJsonTopic")
+                                        .withTrackingEnabled(true)
+                                        .withContentType(JSON)
+                                        .build(),
+                                null));
 
         // and
         String query = "{\"query\": {\"trackingEnabled\": \"true\", \"contentType\": \"AVRO\"}}";
@@ -360,9 +488,18 @@ public class TopicManagementTest {
         WebTestClient.ResponseSpec response = hermes.api().queryTopics(group, query);
 
         // then
-        assertThat(Arrays.stream(Objects.requireNonNull(response.expectBody(String[].class).returnResult().getResponseBody())).toList())
+        assertThat(
+                        Arrays.stream(
+                                        Objects.requireNonNull(
+                                                response.expectBody(String[].class)
+                                                        .returnResult()
+                                                        .getResponseBody()))
+                                .toList())
                 .containsExactly(trackedTopicAvro.getQualifiedName())
-                .doesNotContain(group + "." + "untrackedAvroTopic", group + "." + "untrackedJsonTopic", group + "." + "trackedJsonTopic");
+                .doesNotContain(
+                        group + "." + "untrackedAvroTopic",
+                        group + "." + "untrackedJsonTopic",
+                        group + "." + "trackedJsonTopic");
     }
 
     @Test
@@ -371,19 +508,26 @@ public class TopicManagementTest {
         String group = "dollar";
         hermes.initHelper().createGroup(Group.from(group));
 
-        Stream.of("$name", "na$me", "name$").forEach(topicName -> {
-            // when
-            WebTestClient.ResponseSpec response = hermes.api().createTopic(new TopicWithSchema(topic(group, topicName).build(), null));
+        Stream.of("$name", "na$me", "name$")
+                .forEach(
+                        topicName -> {
+                            // when
+                            WebTestClient.ResponseSpec response =
+                                    hermes.api()
+                                            .createTopic(
+                                                    new TopicWithSchema(
+                                                            topic(group, topicName).build(), null));
 
-            // then
-            response.expectStatus().isBadRequest();
-        });
+                            // then
+                            response.expectStatus().isBadRequest();
+                        });
     }
 
     @Test
     public void shouldCreateTopicWithMaxMessageSize() {
         // given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName().withMaxMessageSize(2048).build(), null);
+        TopicWithSchema topic =
+                new TopicWithSchema(topicWithRandomName().withMaxMessageSize(2048).build(), null);
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
@@ -391,29 +535,46 @@ public class TopicManagementTest {
 
         // then
         response.expectStatus().isCreated();
-        int fetchedMessageSize = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getMaxMessageSize();
+        int fetchedMessageSize =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getMaxMessageSize();
         assertThat(fetchedMessageSize).isEqualTo(2048);
     }
 
     @Test
     public void shouldUpdateTopicWithMaxMessageSize() {
         // given
-        Topic topic = hermes.initHelper().createTopic(topicWithRandomName().withMaxMessageSize(2048).build());
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(topicWithRandomName().withMaxMessageSize(2048).build());
         PatchData patchData = PatchData.from(ImmutableMap.of("maxMessageSize", 1024));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
         // then
         response.expectStatus().isOk();
-        int fetchedMessageSize = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getMaxMessageSize();
+        int fetchedMessageSize =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getMaxMessageSize();
         assertThat(fetchedMessageSize).isEqualTo(1024);
     }
 
     @Test
     public void shouldCreateTopicWithRestrictedSubscribing() {
         // given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName().withSubscribingRestricted().build(), null);
+        TopicWithSchema topic =
+                new TopicWithSchema(
+                        topicWithRandomName().withSubscribingRestricted().build(), null);
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
@@ -421,7 +582,13 @@ public class TopicManagementTest {
 
         // then
         response.expectStatus().isCreated();
-        boolean fetchedIsSubscribingRestricted = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().isSubscribingRestricted();
+        boolean fetchedIsSubscribingRestricted =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .isSubscribingRestricted();
         assertThat(fetchedIsSubscribingRestricted).isTrue();
     }
 
@@ -432,18 +599,26 @@ public class TopicManagementTest {
         PatchData patchData = PatchData.from(ImmutableMap.of("subscribingRestricted", true));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
         // then
         response.expectStatus().isOk();
-        boolean fetchedIsSubscribingRestricted = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().isSubscribingRestricted();
+        boolean fetchedIsSubscribingRestricted =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .isSubscribingRestricted();
         assertThat(fetchedIsSubscribingRestricted).isTrue();
     }
 
     @Test
     public void shouldCreateTopicWithOfflineStorageSettings() {
         // given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName().withOfflineStorage(2).build(), null);
+        TopicWithSchema topic =
+                new TopicWithSchema(topicWithRandomName().withOfflineStorage(2).build(), null);
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
@@ -451,7 +626,15 @@ public class TopicManagementTest {
 
         // then
         response.expectStatus().isCreated();
-        int fetchedOfflineStorageDurationTime = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getOfflineStorage().getRetentionTime().getDuration();
+        int fetchedOfflineStorageDurationTime =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getOfflineStorage()
+                        .getRetentionTime()
+                        .getDuration();
         assertThat(fetchedOfflineStorageDurationTime).isEqualTo(2);
     }
 
@@ -459,93 +642,123 @@ public class TopicManagementTest {
     public void shouldUpdateTopicWithOfflineStorageSettings() {
         // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
-        PatchData patchData = PatchData.from(ImmutableMap.of("offlineStorage", ImmutableMap.of("enabled", true)));
+        PatchData patchData =
+                PatchData.from(ImmutableMap.of("offlineStorage", ImmutableMap.of("enabled", true)));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
         // then
         response.expectStatus().isOk();
-        boolean fetchedIsOfflineStorageEnabled = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getOfflineStorage().isEnabled();
+        boolean fetchedIsOfflineStorageEnabled =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getOfflineStorage()
+                        .isEnabled();
         assertThat(fetchedIsOfflineStorageEnabled).isTrue();
     }
 
     @Test
     public void shouldCreateTopicWithLabels() {
-        //given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName()
-                .withLabels(ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-2"),
-                        new TopicLabel("label-3")
-                ))
-                .build(), null);
+        // given
+        TopicWithSchema topic =
+                new TopicWithSchema(
+                        topicWithRandomName()
+                                .withLabels(
+                                        ImmutableSet.of(
+                                                new TopicLabel("label-1"),
+                                                new TopicLabel("label-2"),
+                                                new TopicLabel("label-3")))
+                                .build(),
+                        null);
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
-        //when
+        // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isCreated();
-        Set<TopicLabel> fetchedLabels = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getLabels();
-        assertThat(fetchedLabels).containsAll(
-                ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-2"),
-                        new TopicLabel("label-3")
-                )
-        );
+        Set<TopicLabel> fetchedLabels =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getLabels();
+        assertThat(fetchedLabels)
+                .containsAll(
+                        ImmutableSet.of(
+                                new TopicLabel("label-1"),
+                                new TopicLabel("label-2"),
+                                new TopicLabel("label-3")));
     }
 
     @Test
     public void shouldUpdateTopicWithLabels() {
-        //given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName()
-                .withLabels(ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-3")
-                ))
-                .build(), null);
+        // given
+        TopicWithSchema topic =
+                new TopicWithSchema(
+                        topicWithRandomName()
+                                .withLabels(
+                                        ImmutableSet.of(
+                                                new TopicLabel("label-1"),
+                                                new TopicLabel("label-3")))
+                                .build(),
+                        null);
         hermes.initHelper().createTopic(topic);
 
-        //when
-        PatchData patchData = PatchData.from(ImmutableMap.of(
-                "labels", ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-2"),
-                        new TopicLabel("label-3")
-                ))
-        );
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        // when
+        PatchData patchData =
+                PatchData.from(
+                        ImmutableMap.of(
+                                "labels",
+                                ImmutableSet.of(
+                                        new TopicLabel("label-1"),
+                                        new TopicLabel("label-2"),
+                                        new TopicLabel("label-3"))));
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isOk();
-        Set<TopicLabel> fetchedLabels = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getLabels();
-        assertThat(fetchedLabels).containsAll(
-                ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-2"),
-                        new TopicLabel("label-3")
-                )
-        );
+        Set<TopicLabel> fetchedLabels =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getLabels();
+        assertThat(fetchedLabels)
+                .containsAll(
+                        ImmutableSet.of(
+                                new TopicLabel("label-1"),
+                                new TopicLabel("label-2"),
+                                new TopicLabel("label-3")));
     }
 
     @Test
     public void shouldNotCreateTopicWithDisallowedLabels() {
         // given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName()
-                .withLabels(ImmutableSet.of(
-                        new TopicLabel("some-random-label"),
-                        new TopicLabel("label-2"),
-                        new TopicLabel("label-3")
-                ))
-                .build(), null);
+        TopicWithSchema topic =
+                new TopicWithSchema(
+                        topicWithRandomName()
+                                .withLabels(
+                                        ImmutableSet.of(
+                                                new TopicLabel("some-random-label"),
+                                                new TopicLabel("label-2"),
+                                                new TopicLabel("label-3")))
+                                .build(),
+                        null);
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
-        //when
+        // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(getErrorCode(response)).isEqualTo(ErrorCode.VALIDATION_ERROR);
         hermes.api().getTopicResponse(topic.getQualifiedName()).expectStatus().isNotFound();
@@ -553,35 +766,42 @@ public class TopicManagementTest {
 
     @Test
     public void shouldNotUpdateTopicWithDisallowedLabels() {
-        //given
-        TopicWithSchema topic = new TopicWithSchema(topicWithRandomName()
-                .withLabels(ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-3")
-                ))
-                .build(), null);
+        // given
+        TopicWithSchema topic =
+                new TopicWithSchema(
+                        topicWithRandomName()
+                                .withLabels(
+                                        ImmutableSet.of(
+                                                new TopicLabel("label-1"),
+                                                new TopicLabel("label-3")))
+                                .build(),
+                        null);
         hermes.initHelper().createTopic(topic);
 
-        //when
-        PatchData patchData = PatchData.from(ImmutableMap.of(
-                "labels", ImmutableSet.of(
-                        new TopicLabel("some-random-label"),
-                        new TopicLabel("label-2"),
-                        new TopicLabel("label-3")
-                ))
-        );
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        // when
+        PatchData patchData =
+                PatchData.from(
+                        ImmutableMap.of(
+                                "labels",
+                                ImmutableSet.of(
+                                        new TopicLabel("some-random-label"),
+                                        new TopicLabel("label-2"),
+                                        new TopicLabel("label-3"))));
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(getErrorCode(response)).isEqualTo(ErrorCode.VALIDATION_ERROR);
-        Set<TopicLabel> fetchedLabels = hermes.api().getTopicResponse(topic.getQualifiedName()).expectBody(TopicWithSchema.class).returnResult().getResponseBody().getLabels();
-        assertThat(fetchedLabels).containsAll(
-                ImmutableSet.of(
-                        new TopicLabel("label-1"),
-                        new TopicLabel("label-3")
-                )
-        );
+        Set<TopicLabel> fetchedLabels =
+                hermes.api()
+                        .getTopicResponse(topic.getQualifiedName())
+                        .expectBody(TopicWithSchema.class)
+                        .returnResult()
+                        .getResponseBody()
+                        .getLabels();
+        assertThat(fetchedLabels)
+                .containsAll(ImmutableSet.of(new TopicLabel("label-1"), new TopicLabel("label-3")));
     }
 
     @Test
@@ -595,7 +815,8 @@ public class TopicManagementTest {
         brokerOperations.createTopic(qualifiedTopicName);
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().createTopic((topicWithSchema(topic(groupName, topicName).build())));
+        WebTestClient.ResponseSpec response =
+                hermes.api().createTopic((topicWithSchema(topic(groupName, topicName).build())));
 
         // then
         response.expectStatus().isCreated();
@@ -606,17 +827,15 @@ public class TopicManagementTest {
     public void shouldNotAllowNonAdminUserCreateTopicWithNonDefaultFallbackToRemoteDatacenter() {
         // given
         TestSecurityProvider.setUserIsAdmin(false);
-        TopicWithSchema topic = topicWithSchema(
-                topicWithRandomName()
-                        .withFallbackToRemoteDatacenterEnabled()
-                        .build()
-        );
+        TopicWithSchema topic =
+                topicWithSchema(
+                        topicWithRandomName().withFallbackToRemoteDatacenterEnabled().build());
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(response.expectBody(String.class).returnResult().getResponseBody())
                 .contains("User is not allowed to set non-default fallback to remote datacenter");
@@ -626,50 +845,60 @@ public class TopicManagementTest {
     public void shouldAllowAdminUserCreateTopicWithNonDefaultFallbackToRemoteDatacenterEnabled() {
         // given
         TestSecurityProvider.setUserIsAdmin(true);
-        TopicWithSchema topic = topicWithSchema(
-                topicWithRandomName()
-                        .withFallbackToRemoteDatacenterEnabled()
-                        .build()
-        );
+        TopicWithSchema topic =
+                topicWithSchema(
+                        topicWithRandomName().withFallbackToRemoteDatacenterEnabled().build());
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isCreated();
     }
 
     @Test
     public void shouldNotAllowNonAdminUserToChangeFallbackToRemoteDatacenter() {
         // given
-        Topic topic = hermes.initHelper().createTopic(topicWithRandomName()
-                .withFallbackToRemoteDatacenterEnabled().build());
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withFallbackToRemoteDatacenterEnabled()
+                                        .build());
         TestSecurityProvider.setUserIsAdmin(false);
-        PatchData patchData = PatchData.from(ImmutableMap.of("fallbackToRemoteDatacenterEnabled", false));
+        PatchData patchData =
+                PatchData.from(ImmutableMap.of("fallbackToRemoteDatacenterEnabled", false));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(response.expectBody(String.class).returnResult().getResponseBody())
-                .contains("User is not allowed to update fallback to remote datacenter for this topic");
+                .contains(
+                        "User is not allowed to update fallback to remote datacenter for this topic");
     }
 
     @Test
     public void shouldAllowAdminUserToChangeFallbackToRemoteDatacenter() {
         // given
-        Topic topic = hermes.initHelper().createTopic(topicWithRandomName()
-                .withFallbackToRemoteDatacenterEnabled()
-                .build());
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withFallbackToRemoteDatacenterEnabled()
+                                        .build());
         TestSecurityProvider.setUserIsAdmin(true);
-        PatchData patchData = PatchData.from(ImmutableMap.of("fallbackToRemoteDatacenterEnabled", false));
+        PatchData patchData =
+                PatchData.from(ImmutableMap.of("fallbackToRemoteDatacenterEnabled", false));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isOk();
     }
 
@@ -677,18 +906,20 @@ public class TopicManagementTest {
     public void shouldAllowNonAdminUserToModifyTopicWithFallbackToRemoteDatacenterEnabled() {
         // given
         TestSecurityProvider.setUserIsAdmin(true);
-        Topic topic = hermes.initHelper().createTopic(
-                topicWithRandomName()
-                        .withFallbackToRemoteDatacenterEnabled()
-                        .build()
-        );
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withFallbackToRemoteDatacenterEnabled()
+                                        .build());
         TestSecurityProvider.setUserIsAdmin(false);
         PatchData patchData = PatchData.from(ImmutableMap.of("description", "new description"));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isOk();
     }
 
@@ -696,17 +927,18 @@ public class TopicManagementTest {
     public void shouldNotAllowNonAdminUserCreateTopicWithChaosEnabled() {
         // given
         TestSecurityProvider.setUserIsAdmin(false);
-        TopicWithSchema topic = topicWithSchema(
-                topicWithRandomName()
-                        .withPublishingChaosPolicy(new PublishingChaosPolicy(DATACENTER, null, Map.of()))
-                        .build()
-        );
+        TopicWithSchema topic =
+                topicWithSchema(
+                        topicWithRandomName()
+                                .withPublishingChaosPolicy(
+                                        new PublishingChaosPolicy(DATACENTER, null, Map.of()))
+                                .build());
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(response.expectBody(String.class).returnResult().getResponseBody())
                 .contains("User is not allowed to set chaos policy for this topic");
@@ -716,17 +948,18 @@ public class TopicManagementTest {
     public void shouldAllowAdminUserCreateTopicWithChaosEnabled() {
         // given
         TestSecurityProvider.setUserIsAdmin(true);
-        TopicWithSchema topic = topicWithSchema(
-                topicWithRandomName()
-                        .withPublishingChaosPolicy(new PublishingChaosPolicy(DATACENTER, null, Map.of()))
-                        .build()
-        );
+        TopicWithSchema topic =
+                topicWithSchema(
+                        topicWithRandomName()
+                                .withPublishingChaosPolicy(
+                                        new PublishingChaosPolicy(DATACENTER, null, Map.of()))
+                                .build());
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isCreated();
     }
 
@@ -734,22 +967,27 @@ public class TopicManagementTest {
     public void shouldNotCreateTopicWithInvalidChaosPolicy() {
         // given
         TestSecurityProvider.setUserIsAdmin(true);
-        TopicWithSchema topic = topicWithSchema(
-                topicWithRandomName()
-                        .withPublishingChaosPolicy(
-                                new PublishingChaosPolicy(DATACENTER, null, Map.of("dc1", new ChaosPolicy(100, 100, 99, false)))
-                        )
-                        .build()
-        );
+        TopicWithSchema topic =
+                topicWithSchema(
+                        topicWithRandomName()
+                                .withPublishingChaosPolicy(
+                                        new PublishingChaosPolicy(
+                                                DATACENTER,
+                                                null,
+                                                Map.of(
+                                                        "dc1",
+                                                        new ChaosPolicy(100, 100, 99, false))))
+                                .build());
         hermes.initHelper().createGroup(Group.from(topic.getName().getGroupName()));
 
         // when
         WebTestClient.ResponseSpec response = hermes.api().createTopic(topic);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(response.expectBody(String.class).returnResult().getResponseBody())
-                .contains("Invalid chaos policy: 'delayFrom' and 'delayTo' must be >= 0, and 'delayFrom' <= 'delayTo'.");
+                .contains(
+                        "Invalid chaos policy: 'delayFrom' and 'delayTo' must be >= 0, and 'delayFrom' <= 'delayTo'.");
     }
 
     @Test
@@ -757,12 +995,14 @@ public class TopicManagementTest {
         // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
         TestSecurityProvider.setUserIsAdmin(false);
-        PatchData patchData = PatchData.from(ImmutableMap.of("chaos", ImmutableMap.of("mode", DATACENTER)));
+        PatchData patchData =
+                PatchData.from(ImmutableMap.of("chaos", ImmutableMap.of("mode", DATACENTER)));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(response.expectBody(String.class).returnResult().getResponseBody())
                 .contains("User is not allowed to update chaos policy for this topic");
@@ -773,12 +1013,14 @@ public class TopicManagementTest {
         // given
         Topic topic = hermes.initHelper().createTopic(topicWithRandomName().build());
         TestSecurityProvider.setUserIsAdmin(true);
-        PatchData patchData = PatchData.from(ImmutableMap.of("chaos", ImmutableMap.of("mode", DATACENTER)));
+        PatchData patchData =
+                PatchData.from(ImmutableMap.of("chaos", ImmutableMap.of("mode", DATACENTER)));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isOk();
     }
 
@@ -786,18 +1028,22 @@ public class TopicManagementTest {
     public void shouldAllowNonAdminUserToModifyTopicWithChaosEnabled() {
         // given
         TestSecurityProvider.setUserIsAdmin(true);
-        Topic topic = hermes.initHelper().createTopic(
-                topicWithRandomName()
-                        .withPublishingChaosPolicy(new PublishingChaosPolicy(DATACENTER, null, Map.of()))
-                        .build()
-        );
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withPublishingChaosPolicy(
+                                                new PublishingChaosPolicy(
+                                                        DATACENTER, null, Map.of()))
+                                        .build());
         TestSecurityProvider.setUserIsAdmin(false);
         PatchData patchData = PatchData.from(ImmutableMap.of("description", "new description"));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isOk();
     }
 
@@ -805,43 +1051,57 @@ public class TopicManagementTest {
     public void shouldNotUpdateTopicWithInvalidChaosPolicy() {
         // given
         TestSecurityProvider.setUserIsAdmin(true);
-        Topic topic = hermes.initHelper().createTopic(
-                topicWithRandomName()
-                        .withPublishingChaosPolicy(
-                                new PublishingChaosPolicy(DATACENTER, null, Map.of("dc1", new ChaosPolicy(100, 100, 100, false)))
-                        )
-                        .build()
-        );
-        PatchData patchData = PatchData.from(
-                ImmutableMap.of(
-                        "chaos",
+        Topic topic =
+                hermes.initHelper()
+                        .createTopic(
+                                topicWithRandomName()
+                                        .withPublishingChaosPolicy(
+                                                new PublishingChaosPolicy(
+                                                        DATACENTER,
+                                                        null,
+                                                        Map.of(
+                                                                "dc1",
+                                                                new ChaosPolicy(
+                                                                        100, 100, 100, false))))
+                                        .build());
+        PatchData patchData =
+                PatchData.from(
                         ImmutableMap.of(
-                                "datacenterPolicies",
-                                ImmutableMap.of("dc1", ImmutableMap.of("delayTo", 99))
-                        )
-                )
-        );
+                                "chaos",
+                                ImmutableMap.of(
+                                        "datacenterPolicies",
+                                        ImmutableMap.of("dc1", ImmutableMap.of("delayTo", 99)))));
 
         // when
-        WebTestClient.ResponseSpec response = hermes.api().updateTopic(topic.getQualifiedName(), patchData);
+        WebTestClient.ResponseSpec response =
+                hermes.api().updateTopic(topic.getQualifiedName(), patchData);
 
-        //then
+        // then
         response.expectStatus().isBadRequest();
         assertThat(response.expectBody(String.class).returnResult().getResponseBody())
-                .contains("Invalid chaos policy: 'delayFrom' and 'delayTo' must be >= 0, and 'delayFrom' <= 'delayTo'.");
+                .contains(
+                        "Invalid chaos policy: 'delayFrom' and 'delayTo' must be >= 0, and 'delayFrom' <= 'delayTo'.");
     }
 
     private static List<String> getGroupTopicsList(String groupName) {
-        return Arrays.stream(Objects.requireNonNull(hermes.api().listTopics(groupName)
-                        .expectStatus()
-                        .isOk()
-                        .expectBody(String[].class)
-                        .returnResult()
-                        .getResponseBody()))
+        return Arrays.stream(
+                        Objects.requireNonNull(
+                                hermes.api()
+                                        .listTopics(groupName)
+                                        .expectStatus()
+                                        .isOk()
+                                        .expectBody(String[].class)
+                                        .returnResult()
+                                        .getResponseBody()))
                 .toList();
     }
 
     public static ErrorCode getErrorCode(WebTestClient.ResponseSpec createTopicResponse) {
-        return Objects.requireNonNull(createTopicResponse.expectBody(ErrorDescription.class).returnResult().getResponseBody()).getCode();
+        return Objects.requireNonNull(
+                        createTopicResponse
+                                .expectBody(ErrorDescription.class)
+                                .returnResult()
+                                .getResponseBody())
+                .getCode();
     }
 }
